samples/_failures_safe/1761693432_851dc8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff8f1906.c: In function ‘main’:
./samples/SAFE/__tmp_ff8f1906.c:139:9: error: expected declaration or statement at end of input
  139 |         printf("No input data\n");
      |         ^~~~~~
./samples/SAFE/__tmp_ff8f1906.c:139:9: error: expected declaration or statement at end of input
